# dotfile

./: .gitignore  CMakeLists.txt  README.md  install.sh
bash/: CMakeLists.txt  bash_profile  bashrc  install.sh
burp/: CMakeLists.txt  burp.conf
cmake/: DotFiles.cmake
dm/: CMakeLists.txt  dmrc  install.sh
emacs/: CMakeLists.txt  TODO.md  emacs-win.el  emacs.el  install.sh
emacs/module/: cmake-edit-mode.el  cython-mode.el  python-mode.el  qml-mode.el  verilog-mode.el
emacs/script/: 0try-require.el  autoload.el  binding.el  c-cpp.el  common.el  edit.el  julia.el  latex.el  myface.el  (+6 more)
fbterm/: CMakeLists.txt  fbtermrc  install.sh
fontconfig/: CMakeLists.txt  fonts.conf  install.sh
git/: CMakeLists.txt  gitconfig  gitconfig-brassboard  gitconfig-home  gitconfig-nilab  gitconfig-nilab.win  gitconfig-yuyichao  gitconfig.win  install.sh
hg/: CMakeLists.txt  hgrc  install.sh
ipython/: CMakeLists.txt  install.sh
jupyter/: custom.js  install.sh
konsole/: CMakeLists.txt  Shell.profile  YYC.colorscheme  install.sh  konsolerc  linux.keytab
krdc/: bookmarks.xml  install.sh  krdcrc
lib/: array.sh  functions.sh
matplotlib/: CMakeLists.txt  install.sh  matplotlibrc
mutt/: CMakeLists.txt  install.sh  muttrc
nacs-lab/: CMakeLists.txt  install.sh  planahead_env.sh  xilinx_env.sh
qtcurve/: install.sh  stylerc
tmux/: CMakeLists.txt  install.sh  tmux.conf
xfce_terminal/: CMakeLists.txt  install.sh  terminalrc
xprofile/: CMakeLists.txt  emacs-layout.xkb  install.sh  xprofile
zsh/: CMakeLists.txt  env.zsh  install.sh  loader.zsh  options.zsh  zshrc
(+15 files in other folders)
