project(dotfile-yyc)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
include(DotFiles)

add_subdirectory(git)
add_subdirectory(emacs)
add_subdirectory(ipython)
add_subdirectory(zsh)
add_subdirectory(burp)
add_subdirectory(bash)
add_subdirectory(fbterm)
add_subdirectory(mutt)
add_subdirectory(hg)
add_subdirectory(dm)
add_subdirectory(xprofile)
